-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.6.0 Alpha
-
Linux Ubuntu 14.04, Open SuSE 64
-
980fd570cd91114d323413e8ddc5313bdb454d18
See http://testresults.qt.io/logs/qt/qtdeclarative/4e2c15b6fd9c43a433392a375fd85241c808d959/LinuxOpenSuse_13_01x86_64LinuxOpenSuse_13_01x86_64GCCDeveloperBuild/c74539c48c70383ec7cd7bb2f9f1ae6aca8fed3c/testrun_1449829118/testlog.txt.gz when trying to integrate: https://codereview.qt-project.org/#/c/143641/
PASS : tst_qquickwindow::animatingSignal()
FAIL! : tst_qquickwindow::contentItemSize() Compared values are not the same
Actual (((QSizeF(contentItem->width(), contentItem->height())))): QSizeF(300x200)
Expected (size) : QSizeF(200x300)
Loc: [tst_qquickwindow.cpp(1980)]
- relates to
-
QTBUG-36938 contentItem doesn't follow window size
-
- Closed
-
| For Gerrit Dashboard: QTBUG-49912 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 143824,4 | xcb: Don't try to detect cases where the WM restricts geometry changes | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |